--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
+    "tr-currency": "^0.0.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
